# gethabook

./: .gitignore  README.md  README_CN.md  pyproject.toml
docs/superpowers/plans/: 2026-04-09-gethatbook.md
src/gethatbook.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/gtb/: cli.py  download.py  models.py  ranking.py  search.py
src/gtb/sources/: __init__.py  annas.py  base.py  libgen.py
tests/: conftest.py  test_annas.py  test_cli.py  test_download.py  test_libgen.py  test_models.py  test_ranking.py  test_search.py
